Source/WebCore/platform/network/ios/WebCoreURLResponseIOS.mm
@@ -49,8 +49,6 @@ void adjustMIMETypeIfNecessary(CFURLResponseRef response, bool isMainResourceLoa
                 return;
             }
         }
-        CFURLResponseSetMIMEType(response, CFSTR("application/octet-stream"));
-        return;
     }
 
 #if !USE(QUICK_LOOK)
@@ -67,8 +65,11 @@ void adjustMIMETypeIfNecessary(CFURLResponseRef response, bool isMainResourceLoa
             updatedType = preferredMIMETypeForFileExtensionFromUTType(extension.get());
         if (updatedType && (!type || CFStringCompare(type, updatedType.get(), kCFCompareCaseInsensitive) != kCFCompareEqualTo))
             CFURLResponseSetMIMEType(response, updatedType.get());
+        return;
     }
 #endif // USE(QUICK_LOOK)
+    if (!type)
+        CFURLResponseSetMIMEType(response, CFSTR("application/octet-stream"));
 }
 
 } // namespace WebCore
